@@ -40,7 +40,7 @@
 /** Create class objects */
 $opus_posts      = new OpusPrimusPosts();
 $opus_comments   = OpusPrimusComments::create_instance();
-$opus_navigation = new OpusPrimusNavigation();
+$opus_navigation = OpusPrimusNavigation::create_instance();
 $opus_gallery    = OpusPrimusGallery::create_instance(); ?>
 
 <div <?php post_class(); ?>>
