@@ -49,7 +49,7 @@ $opus_structures = OpusPrimusStructures::create_instance();
 $opus_posts      = new OpusPrimusPosts();
 $opus_comments   = OpusPrimusComments::create_instance();
 $opus_images     = OpusPrimusImages::create_instance();
-$opus_navigation = new OpusPrimusNavigation(); ?>
+$opus_navigation = OpusPrimusNavigation::create_instance(); ?>
 
 <div <?php post_class(); ?>>
 
