@@ -45,7 +45,7 @@
 $opus_posts      = new OpusPrimusPosts();
 $opus_comments   = OpusPrimusComments::create_instance();
 $opus_images     = OpusPrimusImages::create_instance();
-$opus_navigation = new OpusPrimusNavigation();
+$opus_navigation = OpusPrimusNavigation::create_instance();
 
 /** Display the post */
 ?>
