@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised April 5, 2015
+Last revised April 6, 2015
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 = Version 1.4 =
@@ -13,7 +13,8 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Change `OpusPrimusAuthors` to a singleton style class
 * Change `OpusPrimusGallery` to a singleton style class
 * Change `OpusPrimusHeader` to a singleton style class
-* Change `OpusPrimusArchives` to a singleton style class
+* Change `OpusPrimusImages` to a singleton style class
+* Change `OpusPrimusNavigation` to a singleton style class
 * Ensure `$pagination` has been initialized in `OpusPrimusNavigation::pagination` method
 * Moved the `support_comment` method back into the `OpusPrimusStructures` class
 * Moved the `before_comment_form` and `comments_form_closed` methods back into the `OpusPrimusComments` class
